fixed overflow issue with line chart

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@ header h1{
 
 #rightColumn{
 	float: left; width: 100%;
+	overflow: hidden;
 }
 
 .panel{
